# LiminalQAengineer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_GUIDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  ROADMAP.md  VISION.md  clippy.toml  docker-compose.yml  example_plan.yaml  example_query.json  run-in-docker.sh  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  performance.yml  release.yml  security-audit.yml
configs/: default.yaml
deploy/: docker-compose.monitoring.yml  docker-compose.mvp1.yml  docker-compose.mvp2.yml  prometheus.yml
deploy/grafana/dashboards/: liminalqa.json
deploy/grafana/provisioning/: dashboards.yml
deploy/kubernetes/: deployment.yaml
deploy/prometheus/: alerts.yml  prometheus.yml
docs/: ARCHITECTURE.md  MVP1_QUICKSTART.md  QUICKSTART.md  THREE_LENSES_ANALYSIS.md
docs/monitoring/: README.md  alerts.md  metrics.md
examples/: smoke_test.rs
limctl/: Cargo.toml
limctl/src/: main.rs
limctl/src/commands/: collect_command.rs  init_command.rs  list_runs_command.rs  list_systems_command.rs  list_tests_command.rs  mod.rs  query_command.rs  report_command.rs  run_command.rs
liminalqa-core/: Cargo.toml
liminalqa-core/src/: entities.rs  facts.rs  lib.rs  metrics.rs  report.rs  temporal.rs  types.rs
liminalqa-core/src/baseline/: mod.rs
liminalqa-core/src/resonance/: mod.rs
liminalqa-db/: Cargo.toml
liminalqa-db/migrations/: 001_future_proof_schema.sql  001_initial_schema.sql  002_indexes.sql  003_views.sql
liminalqa-db/src/: error.rs  index.rs  lib.rs  models.rs  postgres.rs  query.rs  storage.rs
liminalqa-grpc/: Cargo.toml  build.rs
liminalqa-grpc/src/: lib.rs  server.rs
liminalqa-ingest/: Cargo.toml  Dockerfile
liminalqa-ingest/benches/: ingestion_benchmark.rs
liminalqa-ingest/src/: baseline.rs  handlers.rs  lib.rs  main.rs  metrics.rs  resonance.rs
liminalqa-ingest/tests/: batch_ingestion_test.rs
liminalqa-runner/: Cargo.toml
liminalqa-runner/src/: conavigation.rs  council.rs  guidance.rs  ingest.rs  lib.rs  metrics.rs  reflection.rs  runner.rs
liminalqa-web/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
liminalqa-web/src/: App.tsx
liminalqa-web/src/components/: DriftChart.tsx  ProtocolCard.tsx
liminalqa-web/src/pages/: Dashboard.tsx
proto/liminalqa/v1/: ingest.proto
samples/: artifacts.json  run.json  signals.json  tests.json
scripts/: demo.sh  deploy.sh  pre-push.sh  setup-dev.sh
services/liminal-db/migrations/: 0001_init.sql  0002_indexes.sql  0003_functions.sql
services/liminal-ingest/: Cargo.toml  Dockerfile
services/liminal-ingest/src/: auth.rs  http.rs  main.rs  models.rs  store.rs
services/liminal-report/: Cargo.toml
services/liminal-report/src/: main.rs  query.rs  render.rs
services/liminal-report/templates/: reflection.html
templates/: reflection.html
