[workspace]
resolver = "2"
members = [
    "liminalqa-core",
    "liminalqa-ingest",
    "liminalqa-db",
    "liminalqa-runner",
    "limctl",
    "liminalqa-grpc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/safal207/LiminalQAengineer"
authors = ["LiminalQA Team"]

[workspace.dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP/REST
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# gRPC (future)
tonic = "0.11"
prost = "0.12"

# Database
sled = "0.34"
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
comfy-table = "7.1"

# Testing
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
