[package]
name = "liminalqa-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
prometheus-client = "0.24.0"
