[package]
name = "liminalqa-db"
version = "0.2.0"
edition = "2021"

[dependencies]
liminalqa-core = { path = "../liminalqa-core" }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "migrate"
] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/Time
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# ID generation
ulid.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
