[package]
name = "liminalqa-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "liminalqa-ingest"
path = "src/main.rs"

[dependencies]
liminalqa-core = { path = "../liminalqa-core" }
liminalqa-db = { path = "../liminalqa-db" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
