[package]
name = "liminalqa-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "liminalqa_ingest"
path = "src/lib.rs"

[[bin]]
name = "liminalqa-ingest"
path = "src/main.rs"

[dependencies]
liminalqa-core = { path = "../liminalqa-core" }
liminalqa-db = { path = "../liminalqa-db" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
prometheus = "0.14.0"
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
tempfile = "3.24.0"
tower = { version = "0.4", features = ["util"] }

[[bench]]
name = "ingestion_benchmark"
harness = false
