[package]
name = "liminalqa-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
liminalqa-core = { path = "../liminalqa-core" }
liminalqa-db = { path = "../liminalqa-db" }
liminalqa-grpc = { path = "../liminalqa-grpc" }
tonic = "0.11"
prometheus-client = "0.24.0"

[dev-dependencies]
tempfile = "3.24.0"
tower = { version = "0.4", features = ["util"] }
