[package]
name = "liminalqa-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
liminalqa-core = { path = "../liminalqa-core" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
ulid.workspace = true

# HTTP client for ingest
reqwest = { version = "0.12", features = ["json"] }
