[package]
name = "liminal-ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "liminal-ingest"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.5"
actix-rt = "2.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }

# Utils
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Config
config = "0.14"
