[package]
name = "liminal-report"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "liminal-report"
path = "src/main.rs"

[dependencies]
liminalqa-core = { path = "../../liminalqa-core" }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Async
tokio = { version = "1.35", features = ["full"] }

# Utils
anyhow = "1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Templates
handlebars = "5.1"
